--- a/src/components/plasmic/knight_card/PlasmicHomepage.module.css
+++ b/src/components/plasmic/knight_card/PlasmicHomepage.module.css
@@ -149,6 +149,18 @@
   width: 1em;
   height: 1em;
 }
+.tv {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+  min-width: 0;
+  padding: 8px;
+}
 .footer:global(.__wab_instance) {
   max-width: 100%;
   position: relative;
