--- a/src/components/plasmic/knight_card/PlasmicHomepage.module.css
+++ b/src/components/plasmic/knight_card/PlasmicHomepage.module.css
@@ -130,6 +130,10 @@
     font-size: 24px;
   }
 }
+.link {
+  color: var(--token-DhgGuKGppUiWUZ);
+  font-weight: 700;
+}
 .button:global(.__wab_instance) {
   max-width: 100%;
   position: relative;
