--- a/src/components/plasmic/knight_card/PlasmicDashboard.module.css
+++ b/src/components/plasmic/knight_card/PlasmicDashboard.module.css
@@ -154,20 +154,62 @@
     font-size: 24px;
   }
 }
-.create:global(.__wab_instance) {
-  max-width: 100%;
+.freeBox___8Pu {
+  flex-direction: row;
+  display: flex;
   position: relative;
-  height: 35px;
+  width: 100%;
+  height: auto;
+  max-width: 100%;
   margin-top: calc(65px + 16px) !important;
-  flex-shrink: 0;
+  min-width: 0;
+  padding: 8px;
 }
-.svg__vxKgu {
+.freeBox___8Pu > :global(.__wab_flex-container) {
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  min-width: 0;
+  margin-left: calc(0px - 20px);
+  width: calc(100% + 20px);
+}
+.freeBox___8Pu > :global(.__wab_flex-container) > *,
+.freeBox___8Pu > :global(.__wab_flex-container) > :global(.__wab_slot) > *,
+.freeBox___8Pu > :global(.__wab_flex-container) > picture > img,
+.freeBox___8Pu
+  > :global(.__wab_flex-container)
+  > :global(.__wab_slot)
+  > picture
+  > img {
+  margin-left: 20px;
+}
+.encrypt:global(.__wab_instance) {
+  max-width: 100%;
+  height: 35px;
+}
+.svg__nyN6X {
   position: relative;
   object-fit: cover;
   width: 1em;
   height: 1em;
 }
-.svg__ee3Em {
+.svg__hGNfM {
+  position: relative;
+  object-fit: cover;
+  width: 1em;
+  height: 1em;
+}
+.decrypt:global(.__wab_instance) {
+  max-width: 100%;
+  height: 35px;
+}
+.svg__cnxS {
+  position: relative;
+  object-fit: cover;
+  width: 1em;
+  height: 1em;
+}
+.svg___7YgKg {
   position: relative;
   object-fit: cover;
   width: 1em;
