--- a/src/components/plasmic/knight_card/PlasmicHomepage.module.css
+++ b/src/components/plasmic/knight_card/PlasmicHomepage.module.css
@@ -134,11 +134,16 @@
   color: var(--token-DhgGuKGppUiWUZ);
   font-weight: 700;
 }
+.reveal__sbBP:global(.__wab_instance) {
+  max-width: 100%;
+  object-fit: cover;
+  position: relative;
+}
 .button:global(.__wab_instance) {
   max-width: 100%;
   position: relative;
 }
-.svg__gCcsp {
+.svg__vYbq {
   position: relative;
   object-fit: cover;
   width: 1em;
@@ -147,7 +152,7 @@
 .text__cVNq {
   font-size: 16px;
 }
-.svg__vzurS {
+.svg___7Wdam {
   position: relative;
   object-fit: cover;
   width: 1em;
